# FundusNet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  colab_train.ipynb  distill.py  docker-compose.yml  export_onnx.py  gunicorn.conf.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
docs/: API.md  CHANGELOG.md  DATASET.md  DEVELOPER.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  README.md  RELATED_WORK.md  openapi.yaml  references.bib
docs/archive/: DESIGN.md  PRODUCT.md
evaluation/: ablation.py  baselines.py  ensemble_eval.py  evaluate.py  figures.py  metrics.py  statistics.py  uncertainty_eval.py  weight_learning.py
models/: efficientnet_b0_retinopathy.onnx
retina_app/: admin.py  api.py  apps.py  config.py  constants.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
retina_app/migrations/: 0001_initial.py  0002_uploadedimage_user.py  0003_predictionrecord.py  0004_fix_user_nullable_and_add_indexes.py  0005_make_uploaded_image_nullable_in_prediction.py  0006_add_patient_and_clinical_fields.py  0007_userprofile.py  0008_remove_userprofile_user_and_more.py
retina_app/ml/: data_pipeline.py  optim.py  registry.py  trainer.py
retina_app/services/: __init__.py  advanced_fusion.py  batch_inference.py  contrastive.py  distillation.py  ensemble.py  exceptions.py  fundus_classifier.py  fundus_validator.py  (+10 more)
retina_project/: asgi.py  urls.py  wsgi.py
scripts/: convert_shifaa_to_onnx.py  debug_inference.py  download_dataset.py  verify_label_mapping.py
(+30 files in other folders)
